--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/ttt.js"></script>
+    <script src="./js/navigation.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="./imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
@@ -28,11 +29,11 @@
     <div class="container">
         <div>
             <ul class="topnav">
-                <!-- <li><a href="/index.html" class="logo">VR</a></li> -->
-                <li><a href="https://vivaldo-roque.github.io/TicTacToe/" class="logo">VR</a></li>
-                <li><a href="pages/contact.html">Contato</a></li>
-                <li class="right">
-                    <a class="active" href="pages/about.html">Sobre</a>
+                <li><a href="./index.html" class="logo">VR</a></li>
+                <li id="home"><a  href="./index.html">Início</a></li>
+                <li id="contact"><a  href="./pages/contact.html">Contato</a></li>
+                <li id="about" class="right">
+                    <a class="active" href="./pages/about.html">Sobre</a>
                 </li>
             </ul>
         </div>
