--- a/pages/about.html
+++ b/pages/about.html
@@ -6,9 +6,10 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/prism.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../imgs/favicon/site.webmanifest">
+	<link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
+	<link rel="manifest" href="../imgs/favicon/site.webmanifest">
+	<script src="../js/navigation.js"></script>
 	<title> Tic Tac Toe </title>
 </head>
 
@@ -17,30 +18,63 @@
 	<div class="container">
 		<div>
 			<ul class="topnav">
-				<!-- <li><a href="/index.html" class="logo">VR</a></li> -->
-				<li><a href="https://vivaldo-roque.github.io/TicTacToe/" class="logo">VR</a></li>
-				<!-- <li><a href="/index.html">Início</a></li> -->
-				<li><a href="https://vivaldo-roque.github.io/TicTacToe/">Início</a></li>
-				<li><a href="contact.html">Contato</a></li>
-				<li class="right"><a class="active" href="about.html">Sobre</a></li>
+				<li><a href="../index.html" class="logo">VR</a></li>
+				<li id="home"><a href="../index.html">Início</a></li>
+				<li id="contact"><a href="./contact.html">Contato</a></li>
+				<li id="about" class="right">
+					<a class="active" href="./about.html">Sobre</a>
+				</li>
 			</ul>
 		</div>
 
 		<div class="content-wrap" style="text-align: justify; padding: 10px;">
 			<h1 style="text-align: center;">Tic tac Toe, jogo da velha ou jogo do galgo</h1>
-			<p>
-				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser considerado como a maximização do ganho mínimo (maximin). Começa-se com dois jogadores 0-0 da teoria dos jogos, cobrindo ambos os casos em que os jogadores tomam caminhos alternados (por rodadas) ou simultaneamente. Pode-se estender o conceito para jogos mais complexos e para tomada de decisão na presença de incertezas. Nesse caso, não existe outro jogador, as consequências das decisões dependem de fatores desconhecidos.
-				<h3>Jogo da velha</h3>
-				Uma versão simples do algoritmo minimax lida com jogos como o jogo da velha, no qual cada jogador pode ganhar, perder ou empatar. Se o jogador A pode vencer com um movimento, esse é o seu melhor movimento. Se o jogador B identifica que um movimento levará a uma situação em que o adversário pode ganhar no próximo movimento, e que existe outro movimento que poderá levar a uma situação em que o adversário pode, no máximo, empatar, então, este último é o melhor movimento para ele. Após algumas rodadas, é fácil identificar qual é o melhor movimento. O algoritmo minimax ajuda a encontrar a melhor jogada, ao se caminhar pelas opções válidas, a partir do fim do jogo. A cada passo, assume-se que o jogador maximizador está tentando maximizar as suas chances de ganhar, enquanto na próxima rodada o jogador minimizador está tentando minimizar as chances de isso acontecer (maximizando as chances de que ele próprio ganhe). O maximizador precisa escolher uma jogada que tem a maior dentre as menores pontuações que o minimizador pode fazer aquele ter.
-				<br><br>
-				<h3>Desempenho e otimizações</h3>
-				O algorítimo mimimax no Jogo da Velha(ou em outros tipos de jogos) pode fazer muito processamento, o que pode fazer o algorítimo ser lento, por isso, deve ser importante fazer-se otimizações para que ele seja efetuado de forma rápida durante a execução do jogo. Para isso pode ser usado por exemplo a Poda alfa-beta. Também pode ser importante, principalmente em dispositivos com baixo poder de processamento como celulares, ou até em dispositivos mais potentes, que os códigos sejam otimizados para evitar-se gastos com processamento e tempo desnecessários pois como esse algoritmo faz muito processamento, principalmente nas análises das primeiras partidas, tais gastos podem ser muito aumentados e causarem um grande impacto na queda de desempenho.
-				<br><br>
-				<h3>Algoritmo</h3>
-				O algoritmo minimax com limite de profundidade (usando uma heurística para terminar o vasculhamento após uma dada profundidade) é mostrado abaixo, em pseudocódigo.
-				<br><br>
-				<div style="max-width: 100%;">
-					<pre style="overflow: scroll;"><code class="language-wiki">ROTINA minimax(nó, profundidade, maximizador)
+			<p class="text">
+				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser
+				considerado como a maximização do ganho mínimo (maximin). Começa-se com dois jogadores 0-0 da teoria dos
+				jogos, cobrindo ambos os casos em que os jogadores tomam caminhos alternados (por rodadas) ou
+				simultaneamente. Pode-se estender o conceito para jogos mais complexos e para tomada de decisão na
+				presença de incertezas. Nesse caso, não existe outro jogador, as consequências das decisões dependem de
+				fatores desconhecidos.</p>
+			<h3>Jogo da velha</h3>
+			<p class="text">
+				Uma versão simples do algoritmo minimax lida com jogos como o jogo da velha, no qual cada jogador pode
+				ganhar, perder ou empatar. Se o jogador A pode vencer com um movimento, esse é o seu melhor movimento.
+				Se o
+				jogador B identifica que um movimento levará a uma situação em que o adversário pode ganhar no próximo
+				movimento, e que existe outro movimento que poderá levar a uma situação em que o adversário pode, no
+				máximo,
+				empatar, então, este último é o melhor movimento para ele. Após algumas rodadas, é fácil identificar
+				qual é
+				o melhor movimento. O algoritmo minimax ajuda a encontrar a melhor jogada, ao se caminhar pelas opções
+				válidas, a partir do fim do jogo. A cada passo, assume-se que o jogador maximizador está tentando
+				maximizar
+				as suas chances de ganhar, enquanto na próxima rodada o jogador minimizador está tentando minimizar as
+				chances de isso acontecer (maximizando as chances de que ele próprio ganhe). O maximizador precisa
+				escolher
+				uma jogada que tem a maior dentre as menores pontuações que o minimizador pode fazer aquele ter.</p>
+			<h3>Desempenho e otimizações</h3>
+			<p class="text">
+				O algorítimo mimimax no Jogo da Velha(ou em outros tipos de jogos) pode fazer muito processamento, o que
+				pode fazer o algorítimo ser lento, por isso, deve ser importante fazer-se otimizações para que ele seja
+				efetuado de forma rápida durante a execução do jogo. Para isso pode ser usado por exemplo a Poda
+				alfa-beta.
+				Também pode ser importante, principalmente em dispositivos com baixo poder de processamento como
+				celulares,
+				ou até em dispositivos mais potentes, que os códigos sejam otimizados para evitar-se gastos com
+				processamento e tempo desnecessários pois como esse algoritmo faz muito processamento, principalmente
+				nas
+				análises das primeiras partidas, tais gastos podem ser muito aumentados e causarem um grande impacto na
+				queda de desempenho.
+			</p>
+			<h3>Algoritmo</h3>
+			<p class="text">
+				O algoritmo minimax com limite de profundidade (usando uma heurística para terminar o vasculhamento após
+				uma
+				dada profundidade) é mostrado abaixo, em pseudocódigo.
+			</p>
+			<div style="max-width: 100%;">
+				<pre style="overflow: scroll;"><code class="language-wiki">ROTINA minimax(nó, profundidade, maximizador)
 						SE nó é um nó terminal OU profundidade = 0 ENTÃO
 							RETORNE o valor da heurística do nó
 						SENÃO SE maximizador é FALSE ENTÃO
@@ -59,13 +93,13 @@
 							RETORNE α
 						FIM SE
 					FIM ROTINA</code></pre>
-				</div>
-				<br><br>
-<div style="width: auto; height: auto;">
-	<img src="../imgs/diagram.png" alt="Minimax" style="max-width:100%;
+			</div>
+			<br><br>
+			<div style="width: auto; height: auto;">
+				<img src="../imgs/diagram.png" alt="Minimax" style="max-width:100%;
 	max-height:100%;">
-</div>
-<br><br><br>
+			</div>
+			<br><br><br>
 			</p>
 		</div>
 
