--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
     <link rel="manifest" href="../imgs/favicon/site.webmanifest">
+    <script src="../js/navigation.js"></script>
     <title> Tic Tac Toe </title>
 </head>
 
@@ -16,12 +17,10 @@
     <div class="container">
         <div>
             <ul class="topnav">
-                <!-- <li><a href="/index.html" class="logo">VR</a></li> -->
-                <li><a href="https://vivaldo-roque.github.io/TicTacToe/" class="logo">VR</a></li>
-                <!-- <li><a href="/index.html">Início</a></li> -->
-                <li><a href="https://vivaldo-roque.github.io/TicTacToe/">Início</a></li>
-                <li><a href="contact.html">Contato</a></li>
-                <li class="right"><a class="active" href="about.html">Sobre</a></li>
+				<li><a href="../index.html" class="logo">VR</a></li>
+				<li id="home"><a href="../index.html">Início</a></li>
+				<li id="contact"><a href="./contact.html">Contato</a></li>
+				<li id="about" class="right"><a class="active" href="./about.html">Sobre</a></li>
             </ul>
         </div>
 
