Made some fixes

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,9 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="../css/social.css">
+    <link rel="stylesheet" href="../css/mediaquery.css">
 	<link rel="stylesheet" href="../css/prism.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
@@ -34,7 +37,7 @@
 				simultaneamente. Pode-se estender o conceito para jogos mais complexos e para tomada de decisão na
 				presença de incertezas. Nesse caso, não existe outro jogador, as consequências das decisões dependem de
 				fatores desconhecidos.</p>
-			<h3>Jogo da velha</h3>
+			<h2>Jogo da velha</h2>
 			<p class="text">
 				Uma versão simples do algoritmo minimax lida com jogos como o jogo da velha, no qual cada jogador pode
 				ganhar, perder ou empatar. Se o jogador A pode vencer com um movimento, esse é o seu melhor movimento.
@@ -51,7 +54,7 @@
 				chances de isso acontecer (maximizando as chances de que ele próprio ganhe). O maximizador precisa
 				escolher
 				uma jogada que tem a maior dentre as menores pontuações que o minimizador pode fazer aquele ter.</p>
-			<h3>Desempenho e otimizações</h3>
+			<h2>Desempenho e otimizações</h2>
 			<p class="text">
 				O algorítimo mimimax no Jogo da Velha(ou em outros tipos de jogos) pode fazer muito processamento, o que
 				pode fazer o algorítimo ser lento, por isso, deve ser importante fazer-se otimizações para que ele seja
@@ -65,7 +68,7 @@
 				análises das primeiras partidas, tais gastos podem ser muito aumentados e causarem um grande impacto na
 				queda de desempenho.
 			</p>
-			<h3>Algoritmo</h3>
+			<h2>Algoritmo</h2>
 			<p class="text">
 				O algoritmo minimax com limite de profundidade (usando uma heurística para terminar o vasculhamento após
 				uma
