--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="../css/social.css">
+    <link rel="stylesheet" href="../css/mediaquery.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
@@ -28,10 +31,10 @@
             <div class="cover2">
                 <div>
                     <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
-                    <h3>Vivaldo Roque</h3>
+                    <h2>Vivaldo Roque</h2>
                 </div>
                 <div style="display: flex; flex-direction: column;">
-                    <h3>Entre Em Contacto</h3>
+                    <h2>Entre Em Contacto</h2>
                     <a href="https://github.com/Vivaldo-Roque" target="_blank" class="social-btn">
                         <svg class="btn-border  gh-btn">
                             <rect x="0" y="0" fill="none" width="100%" height="100%" />
@@ -84,7 +87,7 @@
                         </div>
                         <span>Instagram</span>
                     </a>
-                    <h3>Outros Links</h3>
+                    <h2>Outros Links</h2>
                     <a href="https://www.youtube.com/c/vivaldoroquespeedcuber" target="_blank" class="social-btn">
                         <svg class="btn-border  yt-btn">
                             <rect x="0" y="0" fill="none" width="100%" height="100%" />
