--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/game.css">
+    <link rel="stylesheet" href="./css/social.css">
+    <link rel="stylesheet" href="./css/mediaquery.css">
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/ttt.js"></script>
     <script src="./js/navigation.js"></script>
@@ -40,6 +43,8 @@
         </div>
 
         <div class="content-wrap">
+
+            <div id="install-button"></div>
 
             <h1>
                 Tic Tac Toe
