made some fixes!

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/game.css">
     <link rel="stylesheet" href="../css/social.css">
     <link rel="stylesheet" href="../css/mediaquery.css">
+    <script src="../js/navigation.js"></script>
+    <script src="../js/app.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
@@ -14,7 +16,7 @@
     <title> Tic Tac Toe </title>
 </head>
 
-<body">
+<body onload="main();">
 
     <div class="container">
         <div>
@@ -131,9 +133,6 @@
             </footer>
         </div>
     </div>
-
-    <script src="../js/navigation.js"></script>
-    <script src="../js/app.js"></script>
 
     </body>
 
