--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/social.css">
     <link rel="stylesheet" href="../css/mediaquery.css">
 	<link rel="stylesheet" href="../css/prism.css">
+	<script src="../js/prism.js"></script>
+	<script src="../js/navigation.js"></script>
+	<script src="../js/app.js"></script>
 	<link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../imgs/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="../imgs/favicon/favicon-16x16.png">
@@ -15,7 +18,7 @@
 	<title> Tic Tac Toe </title>
 </head>
 
-<body>
+<body onload="main();">
 	<div class="container">
 		<div>
 			<ul class="topnav">
@@ -116,10 +119,6 @@
 			</footer>
 		</div>
 	</div>
-
-	<script src="../js/prism.js"></script>
-	<script src="../js/navigation.js"></script>
-	<script src="../js/app.js"></script>
 
 </body>
 
