--- a/pages/about.html
+++ b/pages/about.html
@@ -31,13 +31,13 @@
 			</ul>
 		</div>
 
-		<div class="content-wrap" style="text-align: justify; padding: 10px;">
+		<div class="content-wrap">
 
 			<div id="install-button" class="install-button">
                 <div>Instalar</div>
             </div>
 
-			<h1 style="text-align: center;">Tic tac Toe, jogo da velha ou jogo do galgo</h1>
+			<h1>Tic tac Toe, jogo da velha ou jogo do galgo</h1>
 			<p class="text">
 				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser
 				considerado como a maximização do ganho mínimo (maximin). Começa-se com dois jogadores 0-0 da teoria dos
