--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/social.css">
     <link rel="stylesheet" href="./css/mediaquery.css">
     <script src="./js/navigation.js"></script>
-	<script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/ttt.js"></script>
     <script src="./js/navigation.js"></script>
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
     <link rel="manifest" href="./manifest.webmanifest">
+
     <title>Tic Tac Toe</title>
 </head>
 
@@ -36,29 +37,29 @@
         <div>
             <ul class="topnav">
                 <li><a href="./index.html" class="logo">VR</a></li>
-                <li id="home"><a  href="./index.html">Início</a></li>
-                <li id="contact"><a  href="./pages/contact.html">Contato</a></li>
-                <li id="about">
-                    <a href="./pages/about.html">Sobre</a>
-                </li>
+                <li id="home"><a href="./index.html">Início</a></li>
+                <li id="contact"><a href="./pages/contact.html">Contato</a></li>
+                <li id="about"><a href="./pages/about.html">Sobre</a></li>
             </ul>
         </div>
 
         <div class="content-wrap">
 
+            <select id="listLanguages" style="position: absolute; right: 0; width: 8%;"></select>
+
             <div id="install-button" class="install-button">
-                <div>Instalar</div>
+                <div id="install">Instalar</div>
             </div>
 
             <h1>
                 Tic Tac Toe
             </h1>
 
-            <p><b>Nota:</b> X sempre jogará primeiro!</p>
+            <p id="advice_msg"><b id="advice">Nota:</b> X sempre jogará primeiro!</p>
 
             <div class="cover1">
                 <!-- pay 1 VS 1 and 1 VS CPU buttons -->
-                
+
                 <div class="type-container">
                     <button type="button" onclick="oneVsOne();" id="1vs1">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -123,16 +124,16 @@
                     </div>
 
                     <!-- Button to reset game -->
-                    <button id="but" onclick="restart()">
+                    <button id="restart" onclick="restart()">
                         Reiniciar
                     </button>
                 </div>
             </div>
 
-           
+
 
             <div class="popup_box">
-                <h1>Escolha entre "X" ou "O"</h1>
+                <h1 id="side_msg">Escolha entre "X" ou "O"</h1>
                 <div class="btns">
                     <a href="javascript:void(0)" class="btn1">X</a>
                     <a href="javascript:void(0)" class="btn2">O</a>
@@ -142,7 +143,7 @@
 
         <div>
             <footer>
-                <p>Autor: Vivaldo Roque<br /></p>
+                <p id="author">Autor: Vivaldo Roque</p>
             </footer>
         </div>
     </div>
