--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/social.css">
     <link rel="stylesheet" href="../css/mediaquery.css">
 	<link rel="stylesheet" href="../css/prism.css">
+	<script src="../js/jquery-3.6.0.min.js"></script>
 	<script src="../js/prism.js"></script>
 	<script src="../js/navigation.js"></script>
 	<script src="../js/app.js"></script>
@@ -18,35 +19,35 @@
 	<title> Tic Tac Toe </title>
 </head>
 
-<body onload="main();">
+<body>
 	<div class="container">
 		<div>
 			<ul class="topnav">
 				<li><a href="../index.html" class="logo">VR</a></li>
 				<li id="home"><a href="../index.html">Início</a></li>
 				<li id="contact"><a href="./contact.html">Contato</a></li>
-				<li id="about">
-					<a href="./about.html">Sobre</a>
-				</li>
+				<li id="about"><a href="./about.html">Sobre</a></li>
 			</ul>
 		</div>
 
 		<div class="content-wrap">
 
+			<select id="listLanguages" style="position: absolute; right: 0; width: 8%;"></select>
+
 			<div id="install-button" class="install-button">
-                <div>Instalar</div>
+                <div id="install">Instalar</div>
             </div>
 
-			<h1>Tic tac Toe, jogo da velha ou jogo do galgo</h1>
-			<p class="text">
+			<h1 id="about_title_1">Tic tac Toe, jogo da velha ou jogo do galgo</h1>
+			<p id="about_msg_1" class="text">
 				Em teoria da decisão, o minimax (ou minmax) é um método para minimizar a possível perda máxima. Pode ser
 				considerado como a maximização do ganho mínimo (maximin). Começa-se com dois jogadores 0-0 da teoria dos
 				jogos, cobrindo ambos os casos em que os jogadores tomam caminhos alternados (por rodadas) ou
 				simultaneamente. Pode-se estender o conceito para jogos mais complexos e para tomada de decisão na
 				presença de incertezas. Nesse caso, não existe outro jogador, as consequências das decisões dependem de
 				fatores desconhecidos.</p>
-			<h2>Jogo da velha</h2>
-			<p class="text">
+			<h2 id="about_title_2">Jogo da velha</h2>
+			<p id="about_msg_2" class="text">
 				Uma versão simples do algoritmo minimax lida com jogos como o jogo da velha, no qual cada jogador pode
 				ganhar, perder ou empatar. Se o jogador A pode vencer com um movimento, esse é o seu melhor movimento.
 				Se o
@@ -62,8 +63,8 @@
 				chances de isso acontecer (maximizando as chances de que ele próprio ganhe). O maximizador precisa
 				escolher
 				uma jogada que tem a maior dentre as menores pontuações que o minimizador pode fazer aquele ter.</p>
-			<h2>Desempenho e otimizações</h2>
-			<p class="text">
+			<h2 id="about_title_3">Desempenho e otimizações</h2>
+			<p id="about_msg_3" class="text">
 				O algorítimo mimimax no Jogo da Velha(ou em outros tipos de jogos) pode fazer muito processamento, o que
 				pode fazer o algorítimo ser lento, por isso, deve ser importante fazer-se otimizações para que ele seja
 				efetuado de forma rápida durante a execução do jogo. Para isso pode ser usado por exemplo a Poda
@@ -76,14 +77,14 @@
 				análises das primeiras partidas, tais gastos podem ser muito aumentados e causarem um grande impacto na
 				queda de desempenho.
 			</p>
-			<h2>Algoritmo</h2>
-			<p class="text">
+			<h2 id="about_title_4">Algoritmo</h2>
+			<p id="about_msg_4" class="text">
 				O algoritmo minimax com limite de profundidade (usando uma heurística para terminar o vasculhamento após
 				uma
 				dada profundidade) é mostrado abaixo, em pseudocódigo.
 			</p>
 			<div style="max-width: 100%; margin-top: 25px; margin-bottom: 25px;">
-				<pre style="overflow: scroll;"><code class="language-wiki">ROTINA minimax(nó, profundidade, maximizador)
+				<pre style="overflow: scroll;"><code id="code" class="language-wiki">ROTINA minimax(nó, profundidade, maximizador)
 						SE nó é um nó terminal OU profundidade = 0 ENTÃO
 							RETORNE o valor da heurística do nó
 						SENÃO SE maximizador é FALSE ENTÃO
@@ -114,7 +115,7 @@
 
 		<div>
 			<footer>
-				<p>Autor: Vivaldo Roque
+				<p id="author">Autor: Vivaldo Roque
 				</p>
 			</footer>
 		</div>
