--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/game.css">
     <link rel="stylesheet" href="../css/social.css">
     <link rel="stylesheet" href="../css/mediaquery.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="../imgs/favicon/apple-touch-icon.png">
@@ -16,7 +17,7 @@
     <title> Tic Tac Toe </title>
 </head>
 
-<body onload="main();">
+<body>
 
     <div class="container">
         <div>
@@ -30,8 +31,10 @@
 
         <div class="content-wrap">
 
+            <select id="listLanguages" style="position: absolute; right: 0; width: 8%;"></select>
+
             <div id="install-button" class="install-button">
-                <div>Instalar</div>
+                <div id="install">Instalar</div>
             </div>
 
             <div class="cover2">
@@ -40,7 +43,7 @@
                     <h2>Vivaldo Roque</h2>
                 </div>
                 <div style="display: flex; flex-direction: column;">
-                    <h2>Entre Em Contacto</h2>
+                    <h2 id="contact_1">Entre Em Contacto</h2>
                     <a href="https://github.com/Vivaldo-Roque" target="_blank" class="social-btn">
                         <svg class="btn-border  gh-btn">
                             <rect x="0" y="0" fill="none" width="100%" height="100%" />
@@ -93,7 +96,7 @@
                         </div>
                         <span>Instagram</span>
                     </a>
-                    <h2>Outros Links</h2>
+                    <h2 id="contact_2">Outros Links</h2>
                     <a href="https://www.youtube.com/c/vivaldoroquespeedcuber" target="_blank" class="social-btn">
                         <svg class="btn-border  yt-btn">
                             <rect x="0" y="0" fill="none" width="100%" height="100%" />
@@ -128,7 +131,7 @@
 
         <div>
             <footer>
-                <p>Autor: Vivaldo Roque
+                <p id="author">Autor: Vivaldo Roque
                 </p>
             </footer>
         </div>
