--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,27 +23,27 @@
         <div>
             <ul class="topnav">
                 <li><a href="../index.html" class="logo">VR</a></li>
-                <li id="home"><a href="../index.html">Início</a></li>
-                <li id="contact"><a href="./contact.html">Contato</a></li>
-                <li id="about"><a href="./about.html">Sobre</a></li>
+                <li id="home"><a id="home_text" href="../index.html"></a></li>
+                <li id="contact"><a id="contact_text" href="./pages/contact.html"></a></li>
+                <li id="about"><a id="about_text" href="./pages/about.html"></a></li>
             </ul>
         </div>
 
         <div class="content-wrap">
 
-            <select id="listLanguages" style="position: absolute; right: 0; width: 8%;"></select>
+            <select id="listLanguages" style="position: absolute; right: 0; width: 9rem;"></select>
 
             <div id="install-button" class="install-button">
-                <div id="install">Instalar</div>
+                <div id="install"></div>
             </div>
 
             <div class="cover2">
                 <div>
                     <img class="avatar" src="../imgs/avatar.jpg" alt="github image">
-                    <h2>Vivaldo Roque</h2>
+                    <h2></h2>
                 </div>
                 <div style="display: flex; flex-direction: column;">
-                    <h2 id="contact_1">Entre Em Contacto</h2>
+                    <h2 id="contact_1"></h2>
                     <a href="https://github.com/Vivaldo-Roque" target="_blank" class="social-btn">
                         <svg class="btn-border  gh-btn">
                             <rect x="0" y="0" fill="none" width="100%" height="100%" />
@@ -131,8 +131,7 @@
 
         <div>
             <footer>
-                <p id="author">Autor: Vivaldo Roque
-                </p>
+                <p id="author"></p>
             </footer>
         </div>
     </div>
