--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,8 +24,8 @@
             <ul class="topnav">
                 <li><a href="../index.html" class="logo">VR</a></li>
                 <li id="home"><a id="home_text" href="../index.html"></a></li>
-                <li id="contact"><a id="contact_text" href="./pages/contact.html"></a></li>
-                <li id="about"><a id="about_text" href="./pages/about.html"></a></li>
+                <li id="contact"><a id="contact_text" href="./contact.html"></a></li>
+                <li id="about"><a id="about_text" href="./about.html"></a></li>
             </ul>
         </div>
 
