Added game levels

--- a/index.html
+++ b/index.html
@@ -131,13 +131,20 @@
                 </div>
             </div>
 
-
-
-            <div class="popup_box">
-                <h1 id="side_msg"></h1>
+            <div class="popup_box" id="gamemode">
+                <h1 id="game_mode_msg"></h1>
                 <div class="btns">
-                    <a href="javascript:void(0)" class="btn1">X</a>
-                    <a href="javascript:void(0)" class="btn2">O</a>
+                    <a href="javascript:void(0)" id="btn1">X</a>
+                    <a href="javascript:void(0)" id="btn2">O</a>
+                </div>
+            </div>
+
+            <div class="popup_box" id="gamelevel">
+                <h1 id="game_level_msg"></h1>
+                <div class="btns">
+                    <a href="javascript:void(0)" id="btn3" style="font-size: 1rem;"><span id="easy_level"></span></a>
+                    <a href="javascript:void(0)" id="btn4" style="font-size: 1rem;"><span id="intermediate_level"></span></a>
+                    <a href="javascript:void(0)" id="btn5" style="font-size: 1rem;"><span id="hardcore_level"></span></a>
                 </div>
             </div>
         </div>
