--- a/pages/about.html
+++ b/pages/about.html
@@ -59,10 +59,10 @@
 		</div>
 
 		<div>
-			<footer>
-				<p id="author"></p>
-			</footer>
-		</div>
+            <footer>
+                <p id="author">bla</p>
+            </footer>
+        </div>
 	</div>
 
 </body>
